Implement Alliance Image Campaign landing page with responsive design
- Created semantic HTML structure with hero, navigation, info cards, testimonials carousel, resources, contact, and footer sections
- Built comprehensive SCSS with BEM methodology including responsive breakpoints and design tokens
- Implemented interactive JavaScript features:
  - 6-card testimonial carousel with one-at-a-time navigation
  - Video modal system with keyboard controls
  - FAQ modal with dynamic content
  - Smooth scroll navigation with active section highlighting
- Added all image assets exported from Figma (logos, hero images, testimonial photos, backgrounds)
- Configured npm scripts for SCSS compilation and development server
- Created comprehensive documentation (README.md, SETUP.md, ASSET-URLS.md)

Tech stack: HTML5, SCSS (BEM), Vanilla JavaScript
Design source: Figma (KE8ormCSzgxvOtLhHXKpd7)

--- a/package.json
+++ b/package.json
@@ -1,10 +1,20 @@
 {
   "name": "alliance-image-campaign",
   "version": "1.0.0",
-  "description": "",
+  "description": "Alliance for Care at Home - Landing Page Campaign",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "sass:watch": "sass --watch styles.scss:styles.css",
+    "sass:build": "sass styles.scss:styles.css",
+    "sass:build:prod": "sass --style=compressed styles.scss:styles.css",
+    "serve": "npx http-server -p 8000 -o",
+    "dev": "npm run sass:watch & npm run serve"
   },
-  "private": true
+  "keywords": ["healthcare", "landing-page", "responsive", "scss", "bem"],
+  "author": "Alliance for Care at Home",
+  "license": "UNLICENSED",
+  "private": true,
+  "devDependencies": {
+    "sass": "^1.69.0"
+  }
 }
