Reorganize assets: move all served files to assets/ directory
- Moved JavaScript from src/ to assets/index.js (not transformed)
- CSS now builds to assets/css/ instead of root
- Updated all references in index.html
- Updated package.json build scripts
- Updated README with clearer structure explanation

New structure logic:
- src/ = only files that get compiled/transformed (SCSS)
- assets/ = all served files (JS, CSS, images, videos)
- Root = only index.html and config files

This makes the project organization more intuitive and consistent.

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 node_modules/
 package-lock.json
 
-# Build artifacts (compiled CSS is committed for GitHub Pages)
-# styles.css and styles.css.map are intentionally tracked
+# Build artifacts
+# assets/css/ is intentionally tracked for GitHub Pages deployment
 
 # IDE
 .idea/
